# ADA_Proyecto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RegresionLinealDistrito.ipynb  TFSI.ipynb  adaBD  btree.cpp  btree.h  cmake_install.cmake  cuckohashing.cpp  cuckohashing.h  firstload.cpp  main.cpp  personamodelo.h
models/: btree.h  cuckohashing.h  disk-manager.h  dni-pos.h  firstload.h  i-file-utils.h  personamanager.h  personamodelo.h
src/: btree.cpp  cuckohashing.cpp  cuckohashing.h  disk-manager.cpp  firstload.cpp  personamanager.cpp
